cargo-features = ["strip"]

[package]
name = "solver-rs"
version = "0.1.0"
authors = ["Keating Reid <keating.reid@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6"

[profile.release]
strip = "symbols"
